--- a/gb_ui/Base.lproj/Main.storyboard
+++ b/gb_ui/Base.lproj/Main.storyboard
@@ -131,9 +131,6 @@
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDa-Vb-66q">
                                 <rect key="frame" x="20" y="20" width="30" height="30"/>
-                                <connections>
-                                    <segue destination="99o-Va-IQG" kind="unwind" unwindAction="unwindSegueDidTap:" id="0vU-x1-FGo"/>
-                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5oh-Cs-4Ri" customClass="LoadingView" customModule="gb_ui" customModuleProvider="target">
                                 <rect key="frame" x="182" y="479" width="50" height="20"/>
@@ -170,7 +167,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1aI-89-r6L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <exit id="99o-Va-IQG" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-288" y="534"/>
         </scene>
@@ -290,7 +286,7 @@
                     </collectionView>
                     <navigationItem key="navigationItem" id="yNM-gu-Hzf"/>
                     <connections>
-                        <segue destination="up4-0S-0Ku" kind="show" identifier="to_photoScene" id="NKR-H0-Vmp"/>
+                        <segue destination="up4-0S-0Ku" kind="presentation" identifier="to_photoScene" modalPresentationStyle="fullScreen" id="NKR-H0-Vmp"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lSo-9y-J1G" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -306,27 +302,32 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QuW-1R-jJg">
-                                <rect key="frame" x="0.0" y="158" width="414" height="580"/>
+                                <rect key="frame" x="0.0" y="121" width="414" height="654"/>
                                 <gestureRecognizers/>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="pRJ-8D-y6u" appends="YES" id="4QS-Fe-1tc"/>
-                                </connections>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9PP-0e-qBj" customClass="LikeControl" customModule="gb_ui" customModuleProvider="target">
-                                <rect key="frame" x="359" y="753" width="50" height="30"/>
+                                <rect key="frame" x="359" y="790" width="50" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="c2A-1y-ZGe"/>
                                     <constraint firstAttribute="width" constant="50" id="y9x-uT-oQB"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="close" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XAY-Gd-Lni">
+                                <rect key="frame" x="8" y="52" width="30" height="30"/>
+                                <connections>
+                                    <action selector="dismissDidTapped:" destination="up4-0S-0Ku" eventType="touchUpInside" id="LAx-8X-eBk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="7pM-Ec-qzg"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="XAY-Gd-Lni" firstAttribute="leading" secondItem="7pM-Ec-qzg" secondAttribute="leading" constant="8" id="5nS-ZR-tqb"/>
                             <constraint firstItem="9PP-0e-qBj" firstAttribute="trailing" secondItem="7pM-Ec-qzg" secondAttribute="trailing" constant="-5" id="Nij-4t-5W7"/>
                             <constraint firstItem="QuW-1R-jJg" firstAttribute="centerY" secondItem="A9C-X2-hha" secondAttribute="centerY" id="U2L-uu-t9C"/>
                             <constraint firstItem="9PP-0e-qBj" firstAttribute="top" secondItem="QuW-1R-jJg" secondAttribute="bottom" constant="15" id="Xh7-FN-Ra5"/>
                             <constraint firstItem="QuW-1R-jJg" firstAttribute="trailing" secondItem="7pM-Ec-qzg" secondAttribute="trailing" id="aaJ-Ik-G4E"/>
+                            <constraint firstItem="XAY-Gd-Lni" firstAttribute="top" secondItem="7pM-Ec-qzg" secondAttribute="top" constant="8" id="tYT-fZ-tlL"/>
                             <constraint firstItem="QuW-1R-jJg" firstAttribute="leading" secondItem="7pM-Ec-qzg" secondAttribute="leading" id="z2h-2p-5EX"/>
                             <constraint firstItem="QuW-1R-jJg" firstAttribute="height" secondItem="7pM-Ec-qzg" secondAttribute="height" multiplier="0.8" id="zPo-AS-zEV"/>
                         </constraints>
@@ -338,11 +339,6 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zz6-3P-sLx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <tapGestureRecognizer numberOfTapsRequired="2" id="pRJ-8D-y6u">
-                    <connections>
-                        <action selector="didDoubleTapOnImage:" destination="up4-0S-0Ku" id="308-1B-aJw"/>
-                    </connections>
-                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="4588" y="-492"/>
         </scene>
